# RPi-OpenCV-Face-Rec

./: CMakeLists.txt  README.md  align_images.py  camcv_vid1.cpp  facereco.cpp  facrecdata.csv
